Bug 1527976 [Wayland] Don't cancel Drag and Drop on MOZ_GTK_DRAG_RESULT_ERROR for application/x-moz-tabbrowser-tab (tab move), r=jhorak

- X11 uses MOZ_GTK_DRAG_RESULT_NO_TARGET to state 'no place' for drop. Wayland does not have protocol for it and always return MOZ_GTK_DRAG_RESULT_ERROR.
  To emulate X11 behaviour for tab D&D (application/x-moz-tabbrowser-tab mime) don't cancel D&D operation on Wayland for MOZ_GTK_DRAG_RESULT_ERROR
  to allow to create a new tab when user drops tab outside the tab bar.
- Provide some additional loging to D&D code.

Differential Revision: https://phabricator.services.mozilla.com/D70333

--HG--
extra : moz-landing-system : lando